--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="cmyk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -14,6 +14,8 @@
     <title>Shopify Fall 2022 Internship Backend Challenge</title>
   </head>
   <body>
-    <div id="root"></div>
+    <label for="new-item-modal" class="btn modal-button">New item</label>
+    <input type="checkbox" id="new-item-modal" class="modal-toggle" />
+    <%- include('partials/_newItemModal') %>
   </body>
 </html>
