Add table and modals

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,7 @@
   <body>
     <label for="new-item-modal" class="btn modal-button">New item</label>
     <input type="checkbox" id="new-item-modal" class="modal-toggle" />
-    <%- include('partials/_newItemModal') %>
+    <%- include('partials/_newItemModal') %> <%- include('partials/_itemTable')
+    %>
   </body>
 </html>
