--- a/views/partials/_editItemModal.ejs
+++ b/views/partials/_editItemModal.ejs
@@ -5,7 +5,7 @@
       class="btn btn-sm btn-circle absolute right-2 top-2"
       >✕</label
     >
-    <h3 class="text-lg font-bold mb-4 text-left">Edit inventory item</h3>
+    <h3 class="text-lg font-bold mb-4 mt-6 text-left">Edit inventory item - ID: <%=item.id%></h3>
     <form class="max-w-lg">
       <div class="flex flex-col">
         <div class="mb-4">
@@ -17,7 +17,7 @@
           <input
             type="input"
             id="item-name"
-            class="w-48 bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            class="w-48 bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-sky-500 focus:border-sky-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-sky-500 dark:focus:border-sky-500"
             required
             value="<%= item.name %>"
           />
@@ -30,8 +30,8 @@
           >
           <textarea
             id="description"
-            rows="3"
-            class="bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            rows="2"
+            class="bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-sky-500 focus:border-sky-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-sky-500 dark:focus:border-sky-500"
           >
 <%= item.description %></textarea
           >
@@ -46,7 +46,7 @@
             type="input"
             id="type"
             value="<%= item.type %>"
-            class="w-48 bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            class="w-48 bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-sky-500 focus:border-sky-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-sky-500 dark:focus:border-sky-500"
             required
           />
         </div>
@@ -62,10 +62,10 @@
             <select
               id="warehouses"
               required
-              class="bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+              class="bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-sky-500 focus:border-sky-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-sky-500 dark:focus:border-sky-500"
             >
               <% warehouses.forEach( w =>{ %>
-              <option <%= item.warehouse ===w ? "selected" : "" %> ><%= w %></option>
+              <option <%= item.warehouse === w ? "selected" : "" %> ><%= w %></option>
               <% }) %>
             </select>
           </div>
@@ -81,7 +81,7 @@
               id="price"
               min="0"
               step="0.01"
-              class="bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+              class="bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-sky-500 focus:border-sky-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-sky-500 dark:focus:border-sky-500"
               required
             />
           </div>
@@ -94,12 +94,10 @@
             <select
               id="currencies"
               required
-              class="bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+              class="bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-sky-500 focus:border-sky-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-sky-500 dark:focus:border-sky-500"
             >
               <% currencies.forEach( c => { %>
-              <option <%= item.money.currency === c ? "selected" : "" %> >
-                <%= c %>
-              </option>
+              <option <%= item.money.currency === c ? "selected" : "" %> ><%= c %></option>
               <% }) %>
             </select>
           </div>
@@ -114,7 +112,7 @@
               value="<%= item.inStock %>"
               id="amount"
               min="0"
-              class="bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+              class="bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-sky-500 focus:border-sky-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-sky-500 dark:focus:border-sky-500"
               required
             />
           </div>
@@ -122,9 +120,33 @@
 
         <button
           type="submit"
-          class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+          class="text-white bg-sky-700 hover:bg-sky-800 focus:ring-4 focus:outline-none focus:ring-sky-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-sky-600 dark:hover:bg-sky-700 dark:focus:ring-sky-800"
         >
           Save
+        </button>
+      </div>
+    </form>
+    <form class="max-w-lg mt-6">
+      <div class="flex flex-col">
+        <div class="mb-4">
+          <label
+            for="delition-comments"
+            class="block mb-2 text-lg font-medium text-gray-900 dark:text-gray-300 text-left"
+            >Delete the item? </label
+          >
+          <textarea
+            id="delition-comments"
+            rows="2"
+            placeholder="Write your comments here"
+            class="bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-sky-500 focus:border-sky-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-sky-500 dark:focus:border-sky-500"
+          ></textarea
+          >
+        </div>
+        <button
+          type="submit"
+          class="text-white bg-rose-700 hover:bg-rose-800 focus:ring-4 focus:outline-none focus:ring-rose-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-rose-600 dark:hover:bg-rose-700 dark:focus:ring-rose-800"
+        >
+          Delete
         </button>
       </div>
     </form>
