--- a/views/partials/_itemTable.ejs
+++ b/views/partials/_itemTable.ejs
@@ -45,7 +45,7 @@
         <td class="px-6 py-4 text-right">
           <label
             for="<%=item.id%>"
-            class="cursor-pointer font-medium text-blue-600 dark:text-blue-500 hover:underline"
+            class="cursor-pointer font-medium text-sky-600 dark:text-sky-500 hover:underline"
             >Edit</label
           >
           <input type="checkbox" id="<%=item.id%>" class="modal-toggle" />
