Add new inventory item through form

--- a/views/deletedItems.ejs
+++ b/views/deletedItems.ejs
@@ -10,7 +10,7 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
-    <script type="text/javascript" src="/index.js"></script>
+    <script type="text/javascript" src="/js/restoreItem.js"></script>
     <title>Deleted Items</title>
   </head>
   <body class="mx-2 my-6">
