--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
-    <script type="text/javascript" src="/index.js"></script>
+
     <title>Shopify Fall 2022 Internship Backend Challenge</title>
   </head>
   <body class="mx-2 my-6">
@@ -27,5 +27,8 @@
       >
     </div>
     <%- include('partials/_itemTable') %>
+    <script type="text/javascript" src="/bundle.js"></script>
+    <script type="text/javascript" src="/js/addItem.js"></script>
+    <script type="text/javascript" src="/js/editItem.js"></script>
   </body>
 </html>
