--- a/views/partials/_restoreItemModal.ejs
+++ b/views/partials/_restoreItemModal.ejs
@@ -12,12 +12,12 @@
       <div class="flex flex-col">
         <div class="mb-4">
           <label
-            for="delition-comments"
+            for="delition-comments-<%=item.id%>"
             class="block mb-2 text-lg font-medium text-gray-900 dark:text-gray-300 text-left"
             >Restore the item?
           </label>
           <textarea
-            id="delition-comments"
+            id="delition-comments-<%=item.id%>"
             rows="2"
             placeholder="Write your comments here"
             class="bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-sky-500 focus:border-sky-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-sky-500 dark:focus:border-sky-500"
