--- a/views/partials/_editItemModal.ejs
+++ b/views/partials/_editItemModal.ejs
@@ -10,13 +10,13 @@
       <div class="flex flex-col">
         <div class="mb-4">
           <label
-            for="item-name"
+            for="item-name-<%=item.id%>"
             class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300 text-left"
             >Item name *</label
           >
           <input
             type="input"
-            id="item-name"
+            id="item-name-<%=item.id%>"
             class="w-48 bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-sky-500 focus:border-sky-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-sky-500 dark:focus:border-sky-500"
             required
             value="<%= item.name %>"
@@ -24,12 +24,12 @@
         </div>
         <div class="mb-4">
           <label
-            for="description"
+            for="description-<%=item.id%>"
             class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300 text-left"
             >Description</label
           >
           <textarea
-            id="description"
+            id="description-<%=item.id%>"
             rows="2"
             class="bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-sky-500 focus:border-sky-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-sky-500 dark:focus:border-sky-500"
           >
@@ -38,13 +38,13 @@
         </div>
         <div class="mb-4">
           <label
-            for="type"
+            for="type-<%=item.id%>"
             class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300 text-left"
             >Type *</label
           >
           <input
             type="input"
-            id="type"
+            id="type-<%=item.id%>"
             value="<%= item.type %>"
             class="w-48 bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-sky-500 focus:border-sky-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-sky-500 dark:focus:border-sky-500"
             required
@@ -55,12 +55,12 @@
         <div class="flex flex-wrap justify-between items-end">
           <div class="mb-4 w-24">
             <label
-              for="warehouses"
+              for="warehouses--<%=item.id%>"
               class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-400 text-left"
               >Select warehouse *</label
             >
             <select
-              id="warehouses"
+              id="warehouses--<%=item.id%>"
               required
               class="bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-sky-500 focus:border-sky-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-sky-500 dark:focus:border-sky-500"
             >
@@ -71,14 +71,14 @@
           </div>
           <div class="mb-4 w-24 mx-1">
             <label
-              for="type"
+              for="price-<%=item.id%>"
               class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300 text-left"
               >Price</label
             >
             <input
               type="number"
               value="<%= item.money.price %>"
-              id="price"
+              id="price-<%=item.id%>"
               min="0"
               step="0.01"
               class="bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-sky-500 focus:border-sky-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-sky-500 dark:focus:border-sky-500"
@@ -87,12 +87,12 @@
           </div>
           <div class="mb-4 w-24 mx-1">
             <label
-              for="currencies"
+              for="currencies-<%=item.id%>"
               class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-400 text-left"
               >Select currency</label
             >
             <select
-              id="currencies"
+              id="currencies-<%=item.id%>"
               required
               class="bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-sky-500 focus:border-sky-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-sky-500 dark:focus:border-sky-500"
             >
@@ -103,14 +103,14 @@
           </div>
           <div class="mb-4 w-24">
             <label
-              for="amount"
+              for="amount-<%=item.id%>"
               class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300 text-left"
               >Number of items *</label
             >
             <input
               type="number"
               value="<%= item.inStock %>"
-              id="amount"
+              id="amount-<%=item.id%>"
               min="0"
               class="bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-sky-500 focus:border-sky-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-sky-500 dark:focus:border-sky-500"
               required
@@ -130,12 +130,12 @@
       <div class="flex flex-col">
         <div class="mb-4">
           <label
-            for="delition-comments"
+            for="delition-comments-<%=item.id%>"
             class="block mb-2 text-lg font-medium text-gray-900 dark:text-gray-300 text-left"
             >Delete the item? </label
           >
           <textarea
-            id="delition-comments"
+            id="delition-comments-<%=item.id%>"
             rows="2"
             placeholder="Write your comments here"
             class="bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-sky-500 focus:border-sky-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-sky-500 dark:focus:border-sky-500"
