--- a/views/partials/_newItemModal.ejs
+++ b/views/partials/_newItemModal.ejs
@@ -6,7 +6,7 @@
       >✕</label
     >
     <h3 class="text-lg font-bold mb-4">Add new inventory item</h3>
-    <form class="max-w-lg">
+    <form class="max-w-lg" id="new-item-form">
       <div class="flex flex-col">
         <div class="mb-4">
           <label
@@ -40,10 +40,10 @@
             >Type *</label
           >
           <input
+            required
             type="input"
             id="type"
             class="w-48 bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-sky-500 focus:border-sky-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-sky-500 dark:focus:border-sky-500"
-            required
           />
         </div>
       </div>
@@ -114,6 +114,7 @@
 
         <button
           type="submit"
+          id="new-item-submit"
           class="text-white bg-sky-700 hover:bg-sky-800 focus:ring-4 focus:outline-none focus:ring-sky-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-sky-600 dark:hover:bg-sky-700 dark:focus:ring-sky-800"
         >
           Add item
