--- a/views/partials/_itemTable.ejs
+++ b/views/partials/_itemTable.ejs
@@ -7,7 +7,10 @@
     <span class="font-medium">Could not fetch items!</span> Try again later!
   </div>
   <% } else { %>
-  <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
+  <table
+    id="items-table"
+    class="w-full text-sm text-left text-gray-500 dark:text-gray-400"
+  >
     <thead
       class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
     >
