--- a/views/partials/_itemTable.ejs
+++ b/views/partials/_itemTable.ejs
@@ -15,13 +15,13 @@
       class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
     >
       <tr>
-        <th scope="col" class="px-6 py-3">Product name</th>
-        <th scope="col" class="px-6 py-3">Type</th>
-        <th scope="col" class="px-6 py-3">Warehouse</th>
-        <th scope="col" class="px-6 py-3">Description</th>
-        <th scope="col" class="px-6 py-3">Price</th>
-        <th scope="col" class="px-6 py-3">In Stock</th>
-        <th scope="col" class="px-6 py-3">
+        <th scope="col" class="px-2 pl-4 py-3">Product name</th>
+        <th scope="col" class="px-2 py-3">Type</th>
+        <th scope="col" class="px-2 py-3">Warehouse</th>
+        <th scope="col" class="px-2 py-3">Description</th>
+        <th scope="col" class="px-2 py-3">Price</th>
+        <th scope="col" class="px-2 py-3">In Stock</th>
+        <th scope="col" class="px-2 py-3">
           <span class="sr-only">Edit</span>
         </th>
       </tr>
@@ -33,19 +33,19 @@
       >
         <th
           scope="row"
-          class="px-6 py-4 font-medium text-gray-900 dark:text-white whitespace-nowrap"
+          class="px-2 py-4 pl-4 font-medium text-gray-900 dark:text-white whitespace-nowrap"
         >
           <%= item.name %>
         </th>
-        <td class="px-6 py-4"><%= item.type %></td>
-        <td class="px-6 py-4"><%= item.warehouse %></td>
-        <td class="px-6 py-4"><%= item.description %></td>
-        <td class="px-6 py-4">
+        <td class="px-2 py-4"><%= item.type %></td>
+        <td class="px-2 py-4"><%= item.warehouse %></td>
+        <td class="px-2 py-4"><%= item.description %></td>
+        <td class="px-2 py-4">
           <% if( item.money.price) { %> <%= `${item.money.price}
           ${item.money.currency}` %> <% } else { %> Not set <% } %>
         </td>
-        <td class="px-6 py-4"><%= item.inStock %></td>
-        <td class="px-6 py-4 text-right">
+        <td class="px-2 py-4"><%= item.inStock %></td>
+        <td class="px-2 py-4 pr-4 text-right">
           <label
             for="<%=item.id%>"
             class="cursor-pointer font-medium text-sky-600 dark:text-sky-500 hover:underline"
