--- a/views/partials/_editItemModal.ejs
+++ b/views/partials/_editItemModal.ejs
@@ -1,4 +1,4 @@
-<div class="modal" id=<%=item.id%>>
+<div class="modal" id="<%=item.id%>"">
   <div class="modal-box relative">
     <label
       for="<%=item.id%>"
@@ -82,7 +82,6 @@
               min="0"
               step="0.01"
               class="bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-sky-500 focus:border-sky-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-sky-500 dark:focus:border-sky-500"
-              required
             />
           </div>
           <div class="mb-4 w-24 mx-1">
@@ -93,7 +92,6 @@
             >
             <select
               id="currencies-<%=item.id%>"
-              required
               class="bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-sky-500 focus:border-sky-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-sky-500 dark:focus:border-sky-500"
             >
               <% currencies.forEach( c => { %>
