--- a/views/partials/_itemTable.ejs
+++ b/views/partials/_itemTable.ejs
@@ -1,4 +1,6 @@
-<div class="relative overflow-x-auto shadow-md sm:rounded-lg m-4">
+<div
+  class="relative max-w-3xl overflow-x-auto shadow-md sm:rounded-lg m-4 sm:mx-24"
+>
   <% if(error) { %>
   <div
     class="p-4 mb-4 text-sm text-yellow-700 bg-yellow-100 rounded-lg dark:bg-yellow-200 dark:text-yellow-800"
