--- a/views/deletedItems.ejs
+++ b/views/deletedItems.ejs
@@ -13,17 +13,17 @@
     <title>Deleted Items</title>
   </head>
   <body class="mx-2 my-6">
-    <h3 class="text-lg font-bold m-6 text-center">Deleted Inventory Items</h3>
-    <div class="m-4">
+    <h3 class="text-lg font-bold m-6 mx-4 sm:mx-24">Deleted Inventory Items</h3>
+    <div class=" my-8">
     
       <a
         href="/"
-        class="cursor-pointer font-medium text-sky-600 dark:text-sky-500 mx-4 hover:underline"
+        class="cursor-pointer font-medium text-sky-600 dark:text-sky-500 mx-4 sm:mx-24 hover:underline"
         >Back to current inventory items</a
       >
     </div>
-    <div class="m-4">
-      <div class="relative overflow-x-auto shadow-md sm:rounded-lg m-4">
+    <div class="m-4 sm:mx-24">
+      <div class="relative overflow-x-auto max-w-5xl shadow-md sm:rounded-lg">
         <% if(error) { %>
         <div
           class="p-4 mb-4 text-sm text-yellow-700 bg-yellow-100 rounded-lg dark:bg-yellow-200 dark:text-yellow-800"
@@ -32,7 +32,7 @@
           <span class="font-medium">Could not fetch items!</span> Try again later!
         </div>
         <% } else { %>
-        <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400 p-2">
+        <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
           <thead
             class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
           >
