--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,9 +14,11 @@
     <title>Shopify Fall 2022 Internship Backend Challenge</title>
   </head>
   <body class="mx-2 my-6">
-    <h3 class="text-lg font-bold m-6 text-center">Inventory Items</h3>
+    <h3 class="text-lg font-bold m-6 mx-4 sm:mx-24 text-left">
+      Inventory Items
+    </h3>
 
-    <div class="m-4">
+    <div class="m-4 sm:mx-24">
       <label for="new-item-modal" class="btn modal-button">New item</label>
       <input type="checkbox" id="new-item-modal" class="modal-toggle" />
       <%- include('partials/_newItemModal') %>
