Remove type field. Close ,odal after submitting forms

--- a/views/deletedItems.ejs
+++ b/views/deletedItems.ejs
@@ -37,8 +37,7 @@
             class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
           >
             <tr>
-              <th scope="col" class="px-2 pl-4 py-3">Product name</th>
-              <th scope="col" class="px-2 py-3">Type</th>
+              <th scope="col" class="px-2 pl-4 py-3">Product</th>
               <th scope="col" class="px-2 py-3">Warehouse</th>
               <th scope="col" class="px-2 py-3">Description</th>
               <th scope="col" class="px-2 py-3">Price</th>
@@ -60,7 +59,6 @@
               >
                 <%= item.name %>
               </th>
-              <td class="px-2 py-4"><%= item.type %></td>
               <td class="px-2 py-4"><%= item.warehouse %></td>
               <td class="px-2 py-4"><%= item.description %></td>
               <td class="px-2 py-4">
