--- a/views/partials/_editItemModal.ejs
+++ b/views/partials/_editItemModal.ejs
@@ -1,7 +1,7 @@
 <div class="modal" id="<%=item.id%>"">
   <div class="modal-box relative">
     <label
-      for="<%=item.id%>"
+      for="edit-<%=item.id%>"
       class="btn btn-sm btn-circle absolute right-2 top-2"
       >✕</label
     >
