--- a/views/partials/_newItemModal.ejs
+++ b/views/partials/_newItemModal.ejs
@@ -1,4 +1,4 @@
-<div class="modal">
+<div class="modal" id="create-item-modal">
   <div class="modal-box relative">
     <label
       for="new-item-modal"
