--- a/views/partials/_newItemModal.ejs
+++ b/views/partials/_newItemModal.ejs
@@ -33,19 +33,6 @@
             class="bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-sky-500 focus:border-sky-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-sky-500 dark:focus:border-sky-500"
           ></textarea>
         </div>
-        <div class="mb-4">
-          <label
-            for="type"
-            class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300"
-            >Type *</label
-          >
-          <input
-            required
-            type="input"
-            id="type"
-            class="w-48 bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-sky-500 focus:border-sky-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-sky-500 dark:focus:border-sky-500"
-          />
-        </div>
       </div>
       <div class="flex flex-col">
         <div class="flex flex-wrap justify-between items-end">
@@ -90,7 +77,7 @@
               class="bg-gray-50 border text-gray-900 text-sm rounded-lg focus:ring-sky-500 focus:border-sky-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white dark:focus:ring-sky-500 dark:focus:border-sky-500"
             >
               <% currencies.forEach( c => { %>
-              <option><%= c %></option>
+              <option <%= c === "" ? "selected" : "" %>><%= c %></option>
               <% }) %>
             </select>
           </div>
