Add link to live app

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,10 +14,15 @@
     <title>Shopify Fall 2022 Internship Backend Challenge</title>
   </head>
   <body class="mx-2 my-6">
-    <h3 class="text-lg font-bold m-6 mx-4 sm:mx-24 text-left">
-      Inventory Items
-    </h3>
-
+    <div class="flex m-6 mx-4 sm:mx-24 items-end">
+      <h3 class="text-2xl font-bold">Inventory Items</h3>
+      <a
+        class="ml-8 cursor-pointer font-medium text-sky-800 bg-sky-100 rounded rounded-md p-1 dark:text-sky-500 mx-4 hover:underline"
+        href="https://fall-2022-shopify-backend--rreiso.repl.co/"
+        target="_blank"
+        >Open app in a new tab</a
+      >
+    </div>
     <div class="m-4 sm:mx-24">
       <label for="new-item-modal" class="btn modal-button">New item</label>
       <input type="checkbox" id="new-item-modal" class="modal-toggle" />
