--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,7 +17,7 @@
     <div class="flex m-6 mx-4 sm:mx-24 items-end">
       <h3 class="text-2xl font-bold">Inventory Items</h3>
       <a
-        class="ml-8 cursor-pointer font-medium text-sky-800 bg-sky-100 rounded rounded-md p-1 dark:text-sky-500 mx-4 hover:underline"
+        class="ml-8 cursor-pointer font-medium text-sky-800 bg-sky-100 text-center rounded rounded-md p-1 dark:text-sky-500 mx-4 hover:underline"
         href="https://fall-2022-shopify-backend--rreiso.repl.co/"
         target="_blank"
         >Open app in a new tab</a
